--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/backend": "^1.15.1",
     "@clerk/localizations": "^3.4.0",
     "@clerk/nextjs": "^6.0.1",
+    "@hono/clerk-auth": "^2.0.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
