--- a/package.json
+++ b/package.json
@@ -16,20 +16,27 @@
     "@clerk/localizations": "^3.4.0",
     "@clerk/nextjs": "^6.0.1",
     "@hono/clerk-auth": "^2.0.0",
+    "@hono/zod-validator": "^0.4.1",
+    "@hookform/resolvers": "^3.9.0",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.59.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.35.3",
+    "drizzle-zod": "^0.5.1",
     "hono": "^4.6.6",
     "lucide-react": "^0.453.0",
     "next": "15.0.1",
     "postgres": "^3.4.4",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-hook-form": "^7.53.1",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
